优化起服脚本