@@ -1,23 +1,32 @@
  #!/bin/sh
-serverId="001"
-GAME_PID=game_${serverId}.pid
-JMX_IP=`ifconfig eth0 | grep "inet addr:" |awk '{print $2}' | cut -c 6-`
+
+serverName='GameServer'
+GAME_PID=`pwd`/var/game.pid
+#echo "pid="$GAME_PID
+JMX_IP="10.XX.YY.ZZ"
+#JMX_IP=`ifconfig eth0 | grep "inet addr:" |awk '{print $2}' | cut -c 6-`
+JMX_PORT="10086"
 
 JVM_ARGS="-Xms1024m -Xmx1024m -Xmn512m -XX:MaxTenuringThreshold=3"
-JVM_ARGS="$JVM_ARGS="" -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=2 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:-OmitStackTraceInFastThrow -XX:+PrintTenuringDistribution" 
-JVM_ARGS="$JVM_ARGS="" -Dcom.sun.management.jmxremote.port=10086"
+JVM_ARGS="$JVM_ARGS="" -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=2 -XX:+PrintGCDetails -XX:-OmitStackTraceInFastThrow" 
+JVM_ARGS="$JVM_ARGS="" -Dcom.sun.management.jmxremote.port="$JMX_PORT
 JVM_ARGS="$JVM_ARGS="" -Dcom.sun.management.jmxremote.authenticate=false"
 JVM_ARGS="$JVM_ARGS="" -Dcom.sun.management.jmxremote.ssl=false"
 JVM_ARGS="$JVM_ARGS="" -Djava.rmi.server.hostname="$JMX_IP
 
+if [ ! -d "var" ]; then
+  mkdir "var"
+fi
+if [ ! -f ${GAME_PID} ]; then 
+    touch ${GAME_PID}
+fi
+
 if [ $1 == "start" ]; then
-  exist=`ls -l /var/tmp/ | grep ${GAME_PID}`
-  if [[ $exist != '' ]]; then
+  pid=`cat ${GAME_PID}`
+  if [ $pid > 0 ]; then  
     echo "server had started"
     exit 0
   fi
-  cd target/
-  serverName='GameServer'
   localdir=../../gc
   today=`date +%Y-%m-%d`
   if [ ! -d $localdir ]
@@ -28,17 +37,20 @@ if [ $1 == "start" ]; then
   -Xloggc:$localdir/gc_$today.log \
   -Dgame.serverId=$serverId \
   -Dfile.encoding=UTF-8 -jar $serverName.jar > /dev/null &
-    echo $! > /var/tmp/${GAME_PID}
+    echo $! > ${GAME_PID}
 elif [ $1 == "stop" ]; then 
   #pid=`jps -lv|grep serverId=$serverId|awk '{print $1}'`
-  pid=`cat /var/tmp/${GAME_PID}`
+  pid=`cat ${GAME_PID}`
   if [ $pid > 0 ]; then   
-     echo "get ready to close server"
-     kill -15 $pid
-     echo "server closed successfully"
+    echo "get ready to close server"
+    kill 15 $pid
+    rm -f ${GAME_PID}    
+    echo "server closed successfully"
+  else
+    echo "server had not started"
   fi
 elif [ $1 == "update" ]; then 
   git pull 
   mvn clean package -DskipTests 
-exit 0
+  exit 0
 fi
